Add primary info service + implementation